# Penetration_Testing-

./: README.md
khepri-nyame/: DESIGN.md  LICENSE  Makefile  README.md  SECURITY.md  khepri-nyame-3eea4b45-968f-432c-b121-c65616db41ed.csv  pyproject.toml  requirements.txt
khepri-nyame/app/: cli.py  main.py
khepri-nyame/app/agents/: api_mapper_agent.py  authz_agent.py  base.py  orchestrator.py  recon_agent.py  report_agent.py  risk_agent.py  secret_agent.py
khepri-nyame/examples/: import_openapi_request.json  sample_openapi.yaml
khepri-nyame/tests/: test_agents.py  test_parsers.py
thothansi/: LICENSE  README.md  pyproject.toml
thothansi/config/: config.yaml  scope.example.yaml
thothansi/docker/: Dockerfile  docker-compose.yml
thothansi/tests/: test_providers.py  test_scope.py  test_triage.py
thothansi/thothansi/: __init__.py  cli.py  scaffolding.py  theme.py
thothansi/thothansi-data/runs/: run-20260613-230238.json
thothansi/thothansi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
thothansi/thothansi/core/: __init__.py  config.py  engine.py  models.py  scope.py  store.py
thothansi/thothansi/providers/: __init__.py  base.py
thothansi/thothansi/recon/: __init__.py  base.py  crtsh.py  dns_enum.py  fingerprint.py  subdomains.py
thothansi/thothansi/report/: reporter.py
thothansi/thothansi/triage/: __init__.py  analyzer.py
thothansi/thothansi/tui/: __init__.py  app.py
thothansi/thothansi/web/: __init__.py  server.py
thothansi/thothansi/web/static/: app.js  index.html  style.css
(+11 files in other folders)
